src/FinancialForce Accounting/objects/codaBankAccount__c.object
<CustomObject>
    <customHelpPage>codahelpbankaccount</customHelpPage>
    <description>Stores master details on company bank accounts.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankChargesDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankChargesDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankChargesDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankChargesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges GLA)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dimension 1)</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dimension 2)</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dimension 3)</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DirectDebitOriginatorReference__c</fullName>
        <label>Direct Debit Originator Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (General Ledger Account)</relationshipLabel>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IBANNumber__c</fullName>
        <label>IBAN</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestPaidDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterestPaidDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterestPaidDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterestPaidGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid GLA)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterestReceivedDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterestReceivedDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterestReceivedDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterestReceivedGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received GLA)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ReportingCode__c</fullName>
        <label>Reporting Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SWIFTNumber__c</fullName>
        <label>SWIFT Number</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortCode__c</fullName>
        <label>Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountName__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>BankName__c</columns>
        <columns>ReportingCode__c</columns>
        <columns>GeneralLedgerAccount__c</columns>
        <columns>BankAccountCurrency__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>